# cryptogram

./: .gitignore  README.md  cryptogram.cabal  package.yaml  sample-dict.txt  stack.yaml
app/: Main.hs
src/Toy/: Cryptogram.hs
src/Toy/Cryptogram/: Dictionary.hs  Key.hs  Solver.hs
test/: CryptogramSpec.hs  DictionarySpec.hs  KeySpec.hs  SolverSpec.hs  Spec.hs
