name:                cryptogram
version:             0.1.0.0
synopsis:            A cryptogram solver
description:         Please see README.md
homepage:            http://github.com/isaacazuelos/cryptogram#readme
license:             MIT
license-file:        LICENSE
author:              Isaac Azuelos
maintainer:          isaac@azuelos.ca
copyright:           2016 Isaac Azuelos
category:            Toy
build-type:          Simple
cabal-version:       >=1.10
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Toy.Cryptogram
                     , Toy.Cryptogram.Key
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , random
                     , text
                     , vector
  default-language:    Haskell2010

executable cryptogram
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cryptogram
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cryptogram
                     , text
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/isaacazuelos/cryptograms
