name:                cryptogram
version:             0.2.0.1
synopsis:            A cryptogram solver
description:         Please see README.md
homepage:            http://github.com/isaacazuelos/cryptogram#readme
license:             MIT
license-file:        LICENSE
author:              Isaac Azuelos
maintainer:          isaac@azuelos.ca
copyright:           2016 Isaac Azuelos
category:            Toy
build-type:          Simple
cabal-version:       >=1.10
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Toy.Cryptogram
                     , Toy.Cryptogram.Key
                     , Toy.Cryptogram.Dictionary
                     , Toy.Cryptogram.Solver
  build-depends:       base       >= 4.7  && < 5
                     , containers >= 0.5  && < 1.0
                     , random     >= 1.1  && < 2.0
                     , text       >= 1.2  && < 2.0
                     , vector     >= 0.11 && < 1.0
  ghc-options:         -Wall
  default-language:    Haskell2010

executable cryptogram
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , cryptogram           >= 0.2
                     , text                 >= 1.2  && < 2.0
                     , optparse-applicative >= 0.12 && < 1.0
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       KeySpec
                     , DictionarySpec
                     , CryptogramSpec
                     , SolverSpec
  build-depends:       base
                     , cryptogram
                     , text
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/isaacazuelos/cryptograms
